[package]
name = "akita"
version = "0.3.8"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Akita - Mini orm for rust."
readme = "README.md"
keywords = ["akita", "orm", "mysql", "sqlite"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
documentation = "https://docs.rs/akita"
license = "MIT"

[dependencies]
akita_derive = {version = "0.3.0", path = "./akita_derive"}
akita_core = {version = "0.3.0", path = "./akita_core"}
mysql = {version = "20.1.0", optional = true}
rusqlite = {version = "0.21.0", optional = true}
bigdecimal = "0.3.0"
r2d2 = {version = "0.8.9"}
chrono = { version = "0.4", features = ["serde"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
base64 = "0.9"
log = "0.4"
twox-hash = "1"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[dev-dependencies]
akita_derive = { version = "0.3.0", path = "./akita_derive" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["akita-mysql"]

### FEATURES #################################################################

[features]
# default = []

# Provide mysql pool with r2d2.
akita-mysql = ["mysql"]
# Provide sqlite pool with r2d2.
akita-sqlite = ["rusqlite"]
# Database with authentication
akita-auth = []