[package]
name = "akita"
version = "0.6.1"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2021"
description = "Akita - Mini orm for rust."
readme = "README.md"
keywords = ["akita", "orm", "mysql", "sqlite"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
documentation = "https://docs.rs/akita"
license = "MIT"

[dependencies]
# Internal dependencies
akita_derive = { version = "0.6.0", path = "./akita_derive" }
akita_core = { version = "0.6.0", path = "./akita_core" }

# Runtime and tool libraries
tokio = { version = "1", features = ["net"], optional = true }
tokio-util = { version = "0.7.1", features = ["compat"], optional = true }
futures-core = { version = "0.3.19", optional = true }
async-trait = { version = "0.1", optional = true }

# Connection pool
r2d2 = { version = "0.8.9", optional = true }
deadpool = { version = "0.10", features = ["rt_tokio_1"], optional = true }

# Database Driver - Synchronization
mysql = { version = "26.0.1", optional = true, features = ["chrono", "bigdecimal"] }
rusqlite = { version = "0.37.0", features = ["chrono", "serde_json"], optional = true }
#deadpool-sqlite = { version = "0.12.1", features = ["rt_tokio_1"], optional = true }
postgres = { version = "0.19", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }
oracle = { version = "0.6", optional = true, features = ["chrono"] }
tiberius = { version = "0.12", optional = true, default-features = false, features = ["chrono", "bigdecimal", "rust_decimal", "tds73"] }
deadpool-sync = { version = "0.1", optional = true }
# Database driven - asynchronous
mysql_async = { version = "0.36.1", optional = true, features = ["chrono", "bigdecimal", "rust_decimal"] }
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_8"] }

# Generic dependencies (required)
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.9"
dashmap = "6.1.0"
quick-xml = "0.38"
once_cell = "1.8"
regex = "1"
twox-hash = "1"
url = "2.2.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.7.0"
uuid = { version = "1.19", features = ["serde", "v4"] }

# Optional generic dependencies
bigdecimal = { version = "0.4", optional = true }
tracing = { version = "0.1.35" }
anyhow = "1.0.100"

[dev-dependencies]
akita_derive = { version = "0.6.0", path = "./akita_derive" }
criterion = { version = "0.8", features = ["html_reports"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
tempfile = "3.2.0"
tokio = { version = "1", features = ["full"] }

# Performance test configuration
[[bench]]
name = "connection"
harness = false
required-features = ["mysql-sync"]
[[bench]]
name = "basic_crud"
harness = false
required-features = ["mysql-sync"]
[[bench]]
name = "batch_operations"
required-features = ["mysql-sync"]
harness = false
[[bench]]
name = "query_operations"
required-features = ["mysql-sync"]
harness = false
[[bench]]
name = "wrapper_building"
required-features = ["mysql-sync"]
harness = false

[[bench]]
name = "transaction"
harness = false
required-features = ["mysql-sync"]

[[example]]
name = "basic"
required-features = ["mysql-sync"]

[[example]]
name = "advanced"
required-features = ["mysql-sync"]

[[example]]
name = "transaction"
required-features = ["mysql-sync"]

[[test]]
name = "basic_mysql"
required-features = ["mysql-sync"]

[[test]]
name = "basic_mysql_async"
required-features = ["mysql-async"]

[[test]]
name = "basic_mssql"
required-features = ["mssql-sync"]

[[test]]
name = "basic_mssql_async"
required-features = ["mssql-async"]

[[test]]
name = "basic_oracle"
required-features = ["oracle-sync"]


[[test]]
name = "basic_oracle_async"
required-features = ["oracle-async"]

[[test]]
name = "basic_pg"
required-features = ["postgres-sync"]

[[test]]
name = "basic_pg_async"
required-features = ["postgres-async"]

[[test]]
name = "basic_sqlite"
required-features = ["sqlite-sync"]

[[test]]
name = "basic_sqlite_async"
required-features = ["sqlite-async"]


[[test]]
name = "sql_macro"
required-features = ["mysql-sync"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["mysql-sync"]

### FEATURES #################################################################

[features]
default = []

# Database selection feature - synchronization
mysql-sync = ["mysql", "bigdecimal", "r2d2"]
postgres-sync = ["postgres", "bigdecimal", "r2d2"]
oracle-sync = ["oracle", "r2d2"]
mssql-sync = ["tiberius", "bigdecimal", "tokio/rt", "tokio-util", "r2d2"]
sqlite-sync = ["rusqlite", "bigdecimal","r2d2"]

# Database selection feature - asynchronous
mysql-async = ["mysql_async", "bigdecimal", "tokio/full", "tokio-util", "futures-core", "deadpool", "deadpool-sync", "async-trait"]
postgres-async = ["tokio-postgres", "bigdecimal", "tokio/full", "tokio-util", "futures-core", "deadpool", "deadpool-sync", "async-trait"]
oracle-async = ["oracle", "tokio/full", "tokio-util", "futures-core", "deadpool", "deadpool-sync", "async-trait"]
mssql-async = ["tiberius", "bigdecimal", "tokio/full", "tokio-util", "futures-core", "deadpool", "deadpool-sync", "async-trait"]
sqlite-async = ["rusqlite", "bigdecimal","tokio/full", "tokio-util", "futures-core", "deadpool", "deadpool-sync", "async-trait"]