[package]
name = "akita_codegen"
version = "0.5.0"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tera = "1.17.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
akita = {version = "0.5.0", path = "../../akita" }
dialoguer = "0.11.0"
getset = "0.1.2"
regex = "1.9.1"
once_cell = "1.20.2"