[package]
name = "akita_core"
version = "0.3.8"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Akita - Mini orm for rust."
readme = "README.md"
keywords = ["akita", "mysql", "sql"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
twox-hash = "1"
bigdecimal = {version = "0.3.0", features = ["serde"]}
chrono = { version = "0.4", features = ["serde"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
base64 = "0.9"
indexmap = "1.7.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.12"
heck = "^0.3"