[package]
name = "akita_core"
version = "0.6.0"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Akita - Mini orm for rust."
readme = "README.md"
keywords = ["akita", "mysql", "sql","sqlite"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1.35"}
regex = "1"
lazy_static = "1"
bigdecimal = {version = "0.4", features = ["serde"]}
chrono = { version = "0.4.38", features = ["serde", "rkyv"]}
uuid = {version = "1.19", features = ["serde", "v4"]}
base64 = "0.9"
indexmap = "2.7.0"
pnet = "0.35.0"