[package]
name = "akita_derive"
version = "0.3.0"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Akita.Mini Database Helper For MySQL."
readme = "README.md"
keywords = ["akita", "mysql", "sql"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.12"