[package]
name = "akita_derive"
version = "0.6.0"
authors = ["mrpan <1049058427@qq.com>"]
edition = "2018"
description = "Akita - Mini orm for rust."
readme = "README.md"
keywords = ["akita", "mysql", "sql","sqlite"]
categories = ["data-structures", "database-implementations"]
homepage = "https://github.com/wslongchen/akita"
repository = "https://github.com/wslongchen/akita"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1"
syn = { version = "1.0", features = ["extra-traits","full"] }
quote = "1.0"
proc-macro2 = "1.0.12"
proc-macro-error = "1"
lazy_static = "1"
if_chain = "1"
regex = "1"